--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,16 @@
   <h1>New post</h1>
 
   <%= form_for :post, url: posts_path do |f| %>
+    <% if @post.errors.any? %>
+      <div class="errors">
+        <h2><%= pluralize(@post.errors.count, "error") %></h2>
+      </div>
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    <% end %>
     <p>
       <%= f.label :title %><br>
       <%= f.text_field :title %>
