--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |f| %>
+<%= simple_form_for @post do |f| %>
   <% if @post.errors.any? %>
       <div class="errors">
         <h2><%= pluralize(@post.errors.count, "error") %></h2>
@@ -9,17 +9,8 @@
         <% end %>
       </ul>
   <% end %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
 
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
+  <%= f.input :title %>
+  <%= f.input :body, as: :text %>
+  <%= f.button :submit %>
 <% end %>
