Added User to Posts and Comments

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
   <% end %>
 
-  <%= f.input :title %>
+  <%= f.input :title, error: false %>
   <%= f.input :body, as: :text %>
   <%= f.button :submit %>
 <% end %>
