--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,8 @@
   </h1>
 
   <p class="date">
-    Added <%= time_ago_in_words(@post.created_at) %> ago
+    Added <%= time_ago_in_words(@post.created_at) %> ago by
+    <b><%= @post.user.email %></b>
     | <%= link_to 'Edit', edit_post_path(@post) %>
     | <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } %>
   </p>
@@ -16,7 +17,9 @@
   <div id="comments">
     <h2><%= @post.comments.count %> Comments</h2>
     <%= render @post.comments %>
-    <h3>Add comment:</h3>
-    <%= render 'comments/form' %>
+    <% if user_signed_in? %>
+      <h3>Add comment:</h3>
+      <%= render 'comments/form' %>
+    <% end %>
   </div>
 </div>
