--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,15 +1,10 @@
-<%= form_for([@post, @post.comments.build]) do |f| %>
-    <p>
-      <%= f.label :name %><br>
-      <%= f.text_field :name %>
-    </p>
+<%= simple_form_for([@post, @post.comments.build]) do |f| %>
 
     <p>
-      <%= f.label :body %><br>
-      <%= f.text_area :body %>
+      <%= f.input :body %>
     </p>
     <br>
     <p>
-      <%= f.submit %>
+      <%= f.button :submit %>
     </p>
 <% end %>
